##Text encoding: utf-8

2013-03-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: don't crash when deleting a cyclic bond.
	* libs/gcp/reaction-arrow.cc: start work for supporting several attachments
	to the same arrow.
	* libs/gcp/reaction-prop.cc: ditto.
	* libs/gcp/reaction-prop.h: ditto.

2013-03-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: enhance the choice of a stereobond from known parity.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcu/chain.cc: new GetFirstAtom().
	* libs/gcu/chain.h: ditto.
	* libs/gcu/cycle.cc: Evaluates inter-cycle bridge length.
	* libs/gcu/cycle.h: ditto.

2013-02-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mesomery.cc: remove extra white space.
	* libs/gcp/molecule.cc: checl molecule consistency while loading, avoids
	a stack overflow.

2013-02-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mesomer.cc: don't crash when a mesomery inside a reaction is
	destroyed.
	* libs/gcp/mesomery.cc: ditto.
	* libs/gcp/reactant.cc: ditto.
	* libs/gcp/reaction-step.cc: ditto.

2013-02-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-step.cc: fix crash when deleting a reactant using the
	lasso tool.

2013-02-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: change row before emitting the row changed signal.

2013-01-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-step.cc: do not destroy in NotifyEmpty () when empty
	and not standalone.
	* libs/gcp/mesomery.cc: do not allow destruction when inside a reaction.

2012-12-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: requires goffice-0.10 >= 0.10.0.

2012-12-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: fix non bonding electon pairs in anions.

2012-12-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* README: update goffice version.
	* libs/gcp/application.cc: allow arrows outside of reaction or mesomery.